<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_take_sample_rotate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.activity.TakeSampleRotateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/take_rotate_layout"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="matrix"
            android:src="@drawable/arrow"
            android:id="@+id/imageView"/>
    </RelativeLayout>


    <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/color_black"
                   android:layout_alignParentBottom="true"
                   android:id="@+id/take_rotate_layout"
                   android:visibility="visible"
                   android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/color_main_transparent_dark"


            android:orientation="vertical">


            <TextView
                android:text="@string/confirm"
                android:textColor="@color/color_control_panel_text"
                android:layout_width="80dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:id="@+id/textbutton_rotate_confirm"/>

            <TextView
                android:text="@string/cancel"
                android:textColor="@color/color_control_panel_text"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:id="@+id/textbutton_rotate_cancel"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_main_transparent_dark"
            android:layout_above="@+id/button_take_picture"

            android:visibility="visible"
            android:orientation="horizontal">



            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/take_type_default"
                android:gravity="center"
                android:layout_weight="0.33"
                android:textColor="@color/color_white"
                android:id="@+id/textView_type_default"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="0dp"
                android:text="@string/take_type_test"
                android:layout_height="match_parent"
                android:layout_weight="0.66"

                android:progress="50"


                android:id="@+id/seekbar_degree"
                android:backgroundTint="@color/color_white"/>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
